--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,7 @@ $tabs-link-padding: 0.5em 1.5em;
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/tabs.sass";
+
+.brand a:hover, .brand a {
+  color: $orange;
+}
