--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <div id="login">
   <div class="login-card">
 
@@ -13,4 +14,5 @@
       <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
     </div>
   </div>
+</div>
 </div>
